# quantum-trading-platform

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RECTIFICATION_BRIEF.md  SECURITY.md  XAUUSD_LiquidityNexus_NT8.cs  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
.opencode/memory/: session-summary.md
2026-06-11/files-mentioned-by-the-user-xauusd/: XAUUSD_Quantum_2.0_Dashboard_Guide.md
backend/api_gateway/: main.py
backend/audit_engine/: auditor.py
backend/common/: config.py  errors.py  models.py  utils.py
backend/knowledge_engine/: knowledge.py
backend/pie/: cli.py  models.py
backend/regression_engine/: regressor.py
backend/replay_engine/: replay.py
backend/strategy_engine/: engine.py
backend/validation_engine/: validator.py
docs/: continuous_improvement_workflow.md  release_gates.md  requirements_traceability_matrix.csv
docs/01_Project_Charter/: README.md
docs/02_System_Architecture/: README.md
docs/03_Functional_Specification/: README.md
docs/04_Technical_Architecture/: README.md
docs/05_API_Contracts/: README.md
docs/06_Data_Schema/: README.md
docs/07_Formula_Dictionary/: README.md
docs/08_Validation_Framework/: README.md
docs/09_Test_Strategy/: README.md
docs/10_Deployment_Guide/: README.md
docs/11_Audit_Framework/: README.md
docs/12_Project_Intelligence_Engine/: README.md
docs/adr/: ADR-001-cloud-native-architecture.md  README.md  (+2 more)
tests/: conftest.py
workers/: api_gateway.js  wrangler.toml
(+74 files in other folders)
