[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-trading-platform"
version = "4.0.0"
description = "XAUUSD Quantum Trading Platform — Institutional Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pandas>=2.1",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "rabbitmq-client>=0.1",
    "structlog>=24.1",
    "prometheus-client>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.98",
    "ruff>=0.2",
    "mypy>=1.8",
    "bandit>=1.7",
    "pre-commit>=3.6",
    "httpx>=0.26",
]
research = [
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "optuna>=3.5",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "SIM", "ARG", "PTH"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["misc", "untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
